Updated page title for the About page

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;400;900&display=swap" rel="stylesheet" />
         <!-- CSS Style Sheet -->
         <link rel="stylesheet" type="text/css" href="css/styles.production.css" />
-        <title>Portfolio | Home</title>
+        <title>Portfolio | About</title>
     </head>
 
     <body>
