Removed references to inkscape and sodipodi
These references were causing W3c validation errors. Original can be found in img\Niceville2.svg

--- a/about.html
+++ b/about.html
@@ -114,33 +114,8 @@
                         data-name="Layer 1"
                         viewBox="0 0 335.99 235.19"
                         version="1.1"
-                        sodipodi:docname="D_70-01.svg"
-                        inkscape:version="1.3 (0e150ed6c4, 2023-07-21)"
-                        xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
-                        xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
                         xmlns="http://www.w3.org/2000/svg"
-                        xmlns:svg="http://www.w3.org/2000/svg"
                     >
-                        <sodipodi:namedview
-                            id="namedview105"
-                            pagecolor="#505050"
-                            bordercolor="#eeeeee"
-                            borderopacity="1"
-                            inkscape:showpageshadow="0"
-                            inkscape:pageopacity="0"
-                            inkscape:pagecheckerboard="0"
-                            inkscape:deskcolor="#505050"
-                            inkscape:zoom="2.9673503"
-                            inkscape:cx="167.995"
-                            inkscape:cy="117.44485"
-                            inkscape:window-width="1920"
-                            inkscape:window-height="1009"
-                            inkscape:window-x="1912"
-                            inkscape:window-y="-8"
-                            inkscape:window-maximized="1"
-                            inkscape:current-layer="Layer_1"
-                            showgrid="false"
-                        />
                         <defs id="defs8">
                             <style id="style1">
                                 .cls-1 {
@@ -423,7 +398,7 @@
                         </g>
                         <circle class="cls-20 sun" cx="292.69" cy="43.81" r="26.83" id="circle73" />
                         <circle class="cls-23 sun" cx="292.69" cy="43.81" r="20.32" id="circle74" />
-                        <g id="g105" inkscape:label="gboat" class="boat">
+                        <g id="g105" class="boat">
                             <polygon class="cls-3" points="46.61 96.38 30.85 140.95 46.72 140.95 46.61 96.38 46.61 96.38" id="polygon90" />
                             <path class="cls-24" d="M49,97.6h0q-0.49-.39-1-0.75L48,97l-0.81-.52V141l18.7-.07C68.31,126.21,59.23,105.84,49,97.6Z" id="path90" />
                             <path class="cls-22" d="M30.18,143.43s0.25,6.25,4.43,6.25H61.92l4.39-6.27H30.18Z" id="path91" />
