Ran an HTML and CSS formatter.

--- a/work.html
+++ b/work.html
@@ -1,123 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-        <!-- CSS reset  -->
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
-        <!-- Importing Roboto Slab Font -->
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;400;900&display=swap" rel="stylesheet" />
-        <!-- CSS Style Sheet -->
-        <link rel="stylesheet" type="text/css" href="css/styles.production.css" />
-        <title>Portfolio | Work</title>
-    </head>
 
-    <body>
-        <header class="page-header">
-            <a href="./index.html"><img id="HeaderLogoImage" src="img/FullLogo3.png" alt="Full Logo for Developer Elizabeth Howell" class="page-header__item" /></a>
-            <nav class="main-navigation page-header__item">
-                <ul role="menubar" class="navigation-list topbottombordersOut">
-                    <li role="presentation" class="navigation-list__item">
-                        <a href="./index.html" role="menuitem" title="Home" class="navigation-list__item">Home</a>
-                    </li>
-                    <li role="presentation" class="navigation-list__item">
-                        <a href="./about.html" role="menuitem" title="About Me" class="navigation-list__item">About Me</a>
-                    </li>
-                    <li role="presentation" class="navigation-list__item">
-                        <a href="./work.html" role="menuitem" title="Work" class="navigation-list__item navigation-list__item--active">Work</a>
-                    </li>
-                    <li role="presentation" class="navigation-list__item">
-                        <a href="./contact.html" role="menuitem" title="Contact" class="navigation-list__item">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <h1 id="CheckBackText">Check back soon as items are added to my portfolio!</h1>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <!-- CSS reset  -->
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
+    <!-- Importing Roboto Slab Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;400;900&display=swap"
+        rel="stylesheet" />
+    <!-- CSS Style Sheet -->
+    <link rel="stylesheet" type="text/css" href="css/styles.production.css" />
+    <title>Portfolio | Work</title>
+</head>
 
-            <section>
-                <h1>Portfolio of My Work</h1>
-                <div class="project-list">
-                    <div class="project-list__item">
-                        <h2>
-                            Project 1: <br />
-                            Mobile Web App
-                        </h2>
-                        <p>Coming Soon!</p>
-                        <p>Project description -- short project description will go here</p>
-                        <a href="#" target="_blank" title="Link to project"> GitHub link to the project </a>
-                    </div>
+<body>
+    <header class="page-header">
+        <a href="./index.html"><img id="HeaderLogoImage" src="img/FullLogo3.png"
+                alt="Full Logo for Developer Elizabeth Howell" class="page-header__item" /></a>
+        <nav class="main-navigation page-header__item">
+            <ul role="menubar" class="navigation-list topbottombordersOut">
+                <li role="presentation" class="navigation-list__item">
+                    <a href="./index.html" role="menuitem" title="Home" class="navigation-list__item">Home</a>
+                </li>
+                <li role="presentation" class="navigation-list__item">
+                    <a href="./about.html" role="menuitem" title="About Me" class="navigation-list__item">About Me</a>
+                </li>
+                <li role="presentation" class="navigation-list__item">
+                    <a href="./work.html" role="menuitem" title="Work"
+                        class="navigation-list__item navigation-list__item--active">Work</a>
+                </li>
+                <li role="presentation" class="navigation-list__item">
+                    <a href="./contact.html" role="menuitem" title="Contact" class="navigation-list__item">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1 id="CheckBackText">
+            Check back soon as items are added to my portfolio!
+        </h1>
 
-                    <div class="project-list__item">
-                        <h2>
-                            Project 2: <br />
-                            Native OS Application
-                        </h2>
-                        <p>Coming Soon!</p>
-                        <p>Project description -- short project description will go here</p>
-                        <a href="#" target="_blank" title="Link to project"> GitHub link to the project </a>
-                    </div>
-                    <div class="project-list__item">
-                        <h2>
-                            Project 3: <br />
-                            Node.js PDF Generation
-                        </h2>
-                        <p>Coming Soon!</p>
-                        <p>Project description -- short project description will go here</p>
-                        <a href="#" target="_blank" title="Link to project"> GitHub link to the project </a>
-                    </div>
-                    <div class="project-list__item">
-                        <h2>
-                            Project 4: <br />
-                            Styleguide for Portfolio Page
-                        </h2>
-                        <p>Coming Soon!</p>
-                        <p>Project description -- short project description will go here</p>
-                        <a href="#" target="_blank" title="Link to project"> See link to Styleguide </a>
-                    </div>
-                    <div class="project-list__item">
-                        <h2>
-                            Project 5: <br />
-                            Medium Blog - React.js
-                        </h2>
-                        <p>Coming Soon!</p>
-                        <p>Project description -- short project description will go here</p>
-                        <a href="#" target="_blank" title="Link to project">Read my latest blog post! </a>
-                    </div>
-                    <div class="project-list__item">
-                        <h2>Your project?</h2>
-                        <p>I'd love to help you with your front-end and back-end needs! I work in the following: React.js, JavaScript, Java, Java FX, HTML, and CSS. Willing to learn others if needed.</p>
-                        <a href="./contact.html" target="_blank" title="Link to contact page"> Contact me! </a>
-                    </div>
+        <section>
+            <h1>Portfolio of My Work</h1>
+            <div class="project-list">
+                <div class="project-list__item">
+                    <h2>
+                        Project 1: <br />
+                        Mobile Web App
+                    </h2>
+                    <p>Coming Soon!</p>
+                    <p>Project description -- short project description will go here</p>
+                    <a href="#" target="_blank" title="Link to project">
+                        GitHub link to the project
+                    </a>
                 </div>
-            </section>
-        </main>
-        <footer id="FindMeIcons" class="page-footer">
-            <p>Find me on</p>
-            <div class="social-media">
-                <!-- Twitter Icon -->
-                <a href="https://twitter.com/eahowell89" target="_blank" title="Find me on Twitter"><img src="img/twitter.svg" alt="Twitter" /></a>
-                <!-- LinkedIn Icon -->
-                <a href="https://www.linkedin.com/in/elizabethannhowell/" target="_blank" title="Find me on LinkedIn"><img src="img/linkedin.svg" alt="LinkedIn" /></a>
-                <!-- GitHub Icon -->
-                <a href="https://github.com/eahowell" target="_blank" title="Find me on GitHub"><img src="img/github.svg" alt="Github" /></a>
+
+                <div class="project-list__item">
+                    <h2>
+                        Project 2: <br />
+                        Native OS Application
+                    </h2>
+                    <p>Coming Soon!</p>
+                    <p>Project description -- short project description will go here</p>
+                    <a href="#" target="_blank" title="Link to project">
+                        GitHub link to the project
+                    </a>
+                </div>
+                <div class="project-list__item">
+                    <h2>
+                        Project 3: <br />
+                        Node.js PDF Generation
+                    </h2>
+                    <p>Coming Soon!</p>
+                    <p>Project description -- short project description will go here</p>
+                    <a href="#" target="_blank" title="Link to project">
+                        GitHub link to the project
+                    </a>
+                </div>
+                <div class="project-list__item">
+                    <h2>
+                        Project 4: <br />
+                        Styleguide for Portfolio Page
+                    </h2>
+                    <p>Coming Soon!</p>
+                    <p>Project description -- short project description will go here</p>
+                    <a href="#" target="_blank" title="Link to project">
+                        See link to Styleguide
+                    </a>
+                </div>
+                <div class="project-list__item">
+                    <h2>
+                        Project 5: <br />
+                        Medium Blog - React.js
+                    </h2>
+                    <p>Coming Soon!</p>
+                    <p>Project description -- short project description will go here</p>
+                    <a href="#" target="_blank" title="Link to project">Read my latest blog post!
+                    </a>
+                </div>
+                <div class="project-list__item">
+                    <h2>Your project?</h2>
+                    <p>
+                        I'd love to help you with your front-end and back-end needs! I
+                        work in the following: React.js, JavaScript, Java, Java FX, HTML,
+                        and CSS. Willing to learn others if needed.
+                    </p>
+                    <a href="./contact.html" target="_blank" title="Link to contact page">
+                        Contact me!
+                    </a>
+                </div>
             </div>
-            <br />
-            <a href="#">Back to top</a>
-            <br />
-            <br />
-            <br />
-        </footer>
-        <script src="js/tota11y.min.js"></script>
-    </body>
-    <!-- CREDITS -->
-    <!--Title of the Image" by [Artist's Name], Icon Finder. License: [License Type]. Available at: [URL]-->
-    <!--"Roboto Slab" Font by Christian Robertson, Google Fonts, License: APACHE LICENSE, VERSION 2.0. Available at: https://www.apache.org/licenses/LICENSE-2.0-->
-    <!--"Linkedin Icon" by Picons.me, Icon Finder. https://www.iconfinder.com/icons/104493/linkedin_icon-->
-    <!--"Twitter, Bird Icon" by Picons.me, Icon Finder. https://www.iconfinder.com/icons/104501/twitter_bird_icon-->
-    <!--"Code repository, github, repository icon" by Pixel Bazaar, Icon Finder. License: CC BY 3.0 DEED. Available at: https://creativecommons.org/licenses/by/3.0/-->
+        </section>
+    </main>
+    <footer id="FindMeIcons" class="page-footer">
+        <p>Find me on</p>
+        <div class="social-media">
+            <!-- Twitter Icon -->
+            <a href="https://twitter.com/eahowell89" target="_blank" title="Find me on Twitter"><img
+                    src="img/twitter.svg" alt="Twitter" /></a>
+            <!-- LinkedIn Icon -->
+            <a href="https://www.linkedin.com/in/elizabethannhowell/" target="_blank" title="Find me on LinkedIn"><img
+                    src="img/linkedin.svg" alt="LinkedIn" /></a>
+            <!-- GitHub Icon -->
+            <a href="https://github.com/eahowell" target="_blank" title="Find me on GitHub"><img src="img/github.svg"
+                    alt="Github" /></a>
+        </div>
+        <br />
+        <a href="#">Back to top</a>
+        <br />
+        <br />
+        <br />
+    </footer>
+    <script src="js/tota11y.min.js"></script>
+</body>
+<!-- CREDITS -->
+<!--Title of the Image" by [Artist's Name], Icon Finder. License: [License Type]. Available at: [URL]-->
+<!--"Roboto Slab" Font by Christian Robertson, Google Fonts, License: APACHE LICENSE, VERSION 2.0. Available at: https://www.apache.org/licenses/LICENSE-2.0-->
+<!--"Linkedin Icon" by Picons.me, Icon Finder. https://www.iconfinder.com/icons/104493/linkedin_icon-->
+<!--"Twitter, Bird Icon" by Picons.me, Icon Finder. https://www.iconfinder.com/icons/104501/twitter_bird_icon-->
+<!--"Code repository, github, repository icon" by Pixel Bazaar, Icon Finder. License: CC BY 3.0 DEED. Available at: https://creativecommons.org/licenses/by/3.0/-->
+
 </html>
