--- a/index.html
+++ b/index.html
@@ -1,75 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-        <!-- CSS reset  -->
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
-        <!-- Importing Roboto Slab Font -->
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;400;900&display=swap" rel="stylesheet" />
-        <!-- CSS Style Sheet -->
-        <link rel="stylesheet" type="text/css" href="css/styles.production.css" />
-        <title>Portfolio | Home</title>
-    </head>
 
-    <body>
-        <header class="page-header">
-            <a href="./index.html"><img id="HeaderLogoImage" src="img/FullLogo3.png" alt="Full Logo for Developer Elizabeth Howell" class="page-header__item" /></a>
-            <nav class="main-navigation page-header__item">
-                <ul role="menubar" class="navigation-list topbottombordersOut">
-                    <li role="presentation" class="navigation-list__item">
-                        <a href="./index.html" role="menuitem" title="Home" class="navigation-list__item navigation-list__item--active">Home</a>
-                    </li>
-                    <li role="presentation" class="navigation-list__item">
-                        <a href="./about.html" role="menuitem" title="About Me" class="navigation-list__item">About Me</a>
-                    </li>
-                    <li role="presentation" class="navigation-list__item">
-                        <a href="./work.html" role="menuitem" title="Work" class="navigation-list__item">Work</a>
-                    </li>
-                    <li role="presentation" class="navigation-list__item">
-                        <a href="./contact.html" role="menuitem" title="Contact" class="navigation-list__item">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <article id="welcometext" class="profile">
-                <img src="img/ProfileImage-Square.jpg" alt="Round image of Portfolio developer" id="profilepic" class="profile__portrait" />
-                <div class="profile__text">
-                    <h1>Hello World!</h1>
-                    <p>My name is Elizabeth Howell. I am a <span>web developer</span> from Austin, TX.</p>
-                    <a href="./work.html">Check back soon for some examples of my code!</a>
-                </div>
-            </article>
-            <br />
-            <br />
-        </main>
-        <footer id="FindMeIcons" class="page-footer">
-            <p>Find me on</p>
-            <div class="social-media">
-                <!-- Twitter Icon -->
-                <a href="https://twitter.com/eahowell89" target="_blank" title="Find me on Twitter"><img src="img/twitter.svg" alt="Twitter" /></a>
-                <!-- LinkedIn Icon -->
-                <a href="https://www.linkedin.com/in/elizabethannhowell/" target="_blank" title="Find me on LinkedIn"><img src="img/linkedin.svg" alt="LinkedIn" /></a>
-                <!-- GitHub Icon -->
-                <a href="https://github.com/eahowell" target="_blank" title="Find me on GitHub"><img src="img/github.svg" alt="Github" /></a>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <!-- CSS reset  -->
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
+    <!-- Importing Roboto Slab Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;400;900&display=swap"
+        rel="stylesheet" />
+    <!-- CSS Style Sheet -->
+    <link rel="stylesheet" type="text/css" href="css/styles.production.css" />
+    <title>Portfolio | Home</title>
+</head>
+
+<body>
+    <header class="page-header">
+        <a href="./index.html"><img id="HeaderLogoImage" src="img/FullLogo3.png"
+                alt="Full Logo for Developer Elizabeth Howell" class="page-header__item" /></a>
+        <nav class="main-navigation page-header__item">
+            <ul role="menubar" class="navigation-list topbottombordersOut">
+                <li role="presentation" class="navigation-list__item">
+                    <a href="./index.html" role="menuitem" title="Home"
+                        class="navigation-list__item navigation-list__item--active">Home</a>
+                </li>
+                <li role="presentation" class="navigation-list__item">
+                    <a href="./about.html" role="menuitem" title="About Me" class="navigation-list__item">About Me</a>
+                </li>
+                <li role="presentation" class="navigation-list__item">
+                    <a href="./work.html" role="menuitem" title="Work" class="navigation-list__item">Work</a>
+                </li>
+                <li role="presentation" class="navigation-list__item">
+                    <a href="./contact.html" role="menuitem" title="Contact" class="navigation-list__item">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article id="welcometext" class="profile">
+            <img src="img/ProfileImage-Square.jpg" alt="Round image of Portfolio developer" id="profilepic"
+                class="profile__portrait" />
+            <div class="profile__text">
+                <h1>Hello World!</h1>
+                <p>My name is Elizabeth Howell. I am a <span>web developer</span> from Austin, TX.</p>
+                <a href="./work.html">Check back soon for some examples of my code!</a>
             </div>
-            <br />
-            <a href="#">Back to top</a>
-            <br />
-            <br />
-            <br />
-        </footer>
-        <script src="js/tota11y.min.js"></script>
-    </body>
-    <!-- CREDITS -->
-    <!--Title of the Image" by [Artist's Name], Icon Finder. License: [License Type]. Available at: [URL]-->
-    <!--"Roboto Slab" Font by Christian Robertson, Google Fonts, License: APACHE LICENSE, VERSION 2.0. Available at: https://www.apache.org/licenses/LICENSE-2.0-->
-    <!--"Linkedin Icon" by Picons.me, Icon Finder. https://www.iconfinder.com/icons/104493/linkedin_icon-->
-    <!--"Twitter, Bird Icon" by Picons.me, Icon Finder. https://www.iconfinder.com/icons/104501/twitter_bird_icon-->
-    <!--"Code repository, github, repository icon" by Pixel Bazaar, Icon Finder. License: CC BY 3.0 DEED. Available at: https://creativecommons.org/licenses/by/3.0/-->
+        </article>
+        <br />
+        <br />
+    </main>
+    <footer id="FindMeIcons" class="page-footer">
+        <p>Find me on</p>
+        <div class="social-media">
+            <!-- Twitter Icon -->
+            <a href="https://twitter.com/eahowell89" target="_blank" title="Find me on Twitter"><img
+                    src="img/twitter.svg" alt="Twitter" /></a>
+            <!-- LinkedIn Icon -->
+            <a href="https://www.linkedin.com/in/elizabethannhowell/" target="_blank" title="Find me on LinkedIn"><img
+                    src="img/linkedin.svg" alt="LinkedIn" /></a>
+            <!-- GitHub Icon -->
+            <a href="https://github.com/eahowell" target="_blank" title="Find me on GitHub"><img src="img/github.svg"
+                    alt="Github" /></a>
+        </div>
+        <br />
+        <a href="#">Back to top</a>
+        <br />
+        <br />
+        <br />
+    </footer>
+    <script src="js/tota11y.min.js"></script>
+</body>
+<!-- CREDITS -->
+<!--Title of the Image" by [Artist's Name], Icon Finder. License: [License Type]. Available at: [URL]-->
+<!--"Roboto Slab" Font by Christian Robertson, Google Fonts, License: APACHE LICENSE, VERSION 2.0. Available at: https://www.apache.org/licenses/LICENSE-2.0-->
+<!--"Linkedin Icon" by Picons.me, Icon Finder. https://www.iconfinder.com/icons/104493/linkedin_icon-->
+<!--"Twitter, Bird Icon" by Picons.me, Icon Finder. https://www.iconfinder.com/icons/104501/twitter_bird_icon-->
+<!--"Code repository, github, repository icon" by Pixel Bazaar, Icon Finder. License: CC BY 3.0 DEED. Available at: https://creativecommons.org/licenses/by/3.0/-->
+
 </html>
