Fix(screen size): Content adjustment
Corrected the way the about page handles smaller screens.

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     </header>
     <main>
         <article id="Bio" class="bio">
-            <div class="bio__text">
+            <div class="bio__text bio__item">
                 <h1>A little about me</h1>
                 <p>My name is Elizabeth Howell and I live in Austin, TX.</p>
                 <p>
@@ -108,11 +108,10 @@
                 <a href="files/Resume-Howell.pdf" class="button1" download>Download my Resume Here!</a>
             </div>
 
-            <br />
-            <br />
-            <br />
-
-            <div>
+            <div class="bio__svg bio__item">
+                <br />
+                <br />
+                <br />
                 <svg id="Layer_1" class="svg-beach" data-name="Layer 1" viewBox="0 0 335.99 235.19" version="1.1"
                     xmlns="http://www.w3.org/2000/svg">
                     <defs id="defs8">
@@ -553,6 +552,7 @@
                         <tspan x="-0.47794175" y="32.562347" id="tspan2">Niceville, FL</tspan>
                     </text>
                 </svg>
+                <br>
                 <a href="https://www.vecteezy.com/free-vector/sailboat" target="_blank"
                     title="Sailboat SVG with Niceville, FL written above it" id="link__SailboatCredit">Sailboat Vectors
                     by Vecteezy</a>
