Style: Contact change to fit on one screen
Made adjustments based on feedback to get the content on the contact page into a single frame instead of having to scroll

--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,8 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <article>
+    <main class="contactheader">
+        <article class="contactdata contactformbox">
             <h1 class="link__calltoaction">
                 <a href="mailto:ehowell.webdev@gmail.com" title="Click here to contact me by email">Contact Me!</a>
             </h1>
@@ -91,11 +91,11 @@
             <br />
         </article>
 
-        <article>
+        <article class="contactdata contactinfobox">
             <h2>Contact Infomation</h2>
             <div>
                 <h3>Elizabeth Howell</h3>
-                <br />
+                
                 <p>
                     <a href="mailto:ehowell.webdev@gmail.com">Email: ehowell.webdev (at) gmail (dot) com</a>
                 </p>
