Updated Logo and Icons to Match Brand Colors

--- a/work.html
+++ b/work.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;400;900&display=swap"
         rel="stylesheet" />
     <!-- CSS Style Sheet -->
-    <link rel="stylesheet" type="text/css" href="css/styles.production.css" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <title>Portfolio | Work</title>
 </head>
 
@@ -120,16 +120,16 @@
     </main>
     <footer id="FindMeIcons" class="page-footer">
         <p>Find me on</p>
-        <div class="social-media">
-            <!-- Twitter Icon -->
-            <a href="https://twitter.com/eahowell89" target="_blank" title="Find me on Twitter"><img
-                    src="img/twitter.svg" alt="Twitter" /></a>
+        <div class="social-media svgBackgroung">
+            <!-- X Icon -->
+            <a href="https://twitter.com/eahowell89" target="_blank" title="Find me on X"><img
+                    src="img/twitter.svg" alt="X icon" class="xSVG"/></a>
             <!-- LinkedIn Icon -->
             <a href="https://www.linkedin.com/in/elizabethannhowell/" target="_blank" title="Find me on LinkedIn"><img
-                    src="img/linkedin.svg" alt="LinkedIn" /></a>
+                    src="img/linkedin.svg" alt="LinkedIn" class="linkedSVG"/></a>
             <!-- GitHub Icon -->
             <a href="https://github.com/eahowell" target="_blank" title="Find me on GitHub"><img src="img/github.svg"
-                    alt="Github" /></a>
+                    alt="Github" class="gitSVG"/></a>
         </div>
         <br />
         <a href="#">Back to top</a>
@@ -143,7 +143,7 @@
 <!--Title of the Image" by [Artist's Name], Icon Finder. License: [License Type]. Available at: [URL]-->
 <!--"Roboto Slab" Font by Christian Robertson, Google Fonts, License: APACHE LICENSE, VERSION 2.0. Available at: https://www.apache.org/licenses/LICENSE-2.0-->
 <!--"Linkedin Icon" by Picons.me, Icon Finder. https://www.iconfinder.com/icons/104493/linkedin_icon-->
-<!--"Twitter, Bird Icon" by Picons.me, Icon Finder. https://www.iconfinder.com/icons/104501/twitter_bird_icon-->
+<!--"X Twitter Icons" by IconFinder, Icon Finder. https://www.iconfinder.com/icons/11244080/x_twitter_elon%20musk_twitter%20new%20logo_icon-->
 <!--"Code repository, github, repository icon" by Pixel Bazaar, Icon Finder. License: CC BY 3.0 DEED. Available at: https://creativecommons.org/licenses/by/3.0/-->
 
 </html>
