--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,10 @@
     <!-- CSS reset  -->
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
-    <!-- Importing Roboto Slab Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;400;900&display=swap"
-        rel="stylesheet" />
+    <!-- Importing Roboto Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <!-- CSS Style Sheet -->
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <title>Portfolio | Contact</title>
@@ -42,7 +41,7 @@
         </nav>
     </header>
     <main class="contactheader">
-        <article class="contactdata contactformbox">
+        <!-- <article class="contactdata contactformbox">
             <h1 class="link__calltoaction">
                 <a href="mailto:ehowell.webdev@gmail.com" title="Click here to contact me by email">Contact Me!</a>
             </h1>
@@ -56,7 +55,7 @@
                 <input type="email" name="RequestorEmail" id="RequestorEmail"/>
                 <br />
                 <br />
-                <!-- pattern="\d{3}[\-]\d{3}[\-]\d{4}"  -->
+                
                 <label for="RequestorPhone" class="standard-label">Phone* </label>
                 <input name="RequestorPhone" id="RequestorPhone"
                     placeholder="999-999-9999"/>
@@ -89,7 +88,7 @@
             </form>
             <br />
             <br />
-        </article>
+        </article> -->
 
         <article class="contactdata contactinfobox">
             <h2>Contact Infomation</h2>
