Added Project To Work

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <p>I am a Mechanical Engineer turned  
                     <br> Full-Stack Web Developer 
                     <br> living in Austin, TX.</p>
-                <a href="./work.html">Check back soon for some examples of my code!</a>
+                <a href="./work.html">Check out some examples of my work!</a>
             </div>
         </article>
         <br />
