Updated Button on Home Page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <p>I am a Mechanical Engineer turned  
                     <br> Full-Stack Web Developer 
                     <br> living in Austin, TX.</p>
-                <a href="./work.html">Check out some examples of my work!</a>
+                <a class="button1"  href="./work.html">Check out some examples of my work!</a>
             </div>
         </article>
         <br />
