--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
           class="page-header__item"
       /></a>
       <nav class="main-navigation page-header__item">
-        <ul role="menubar" class="navigation-list topbottombordersOut">
+        <ul role="menubar" class="navigation-list brackets">
           <li role="presentation" class="navigation-list__item">
             <a
               href="./index.html"
