--- a/contact.html
+++ b/contact.html
@@ -1,136 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <!-- CSS reset  -->
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"
+    />
     <!-- Importing Roboto Font -->
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> -->
     <!-- Importing IBM Plex Sans Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
     <!-- CSS Style Sheet -->
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <title>Portfolio | Contact</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="page-header">
-        <a href="./index.html"><img id="HeaderLogoImage" src="img/FullLogo3.png"
-                alt="Full Logo for Developer Elizabeth Howell" class="page-header__item" /></a>
-        <nav class="main-navigation page-header__item">
-            <ul role="menubar" class="navigation-list topbottombordersOut">
-                <li role="presentation" class="navigation-list__item">
-                    <a href="./index.html" role="menuitem" title="Home" class="navigation-list__item">Home</a>
-                </li>
-                <li role="presentation" class="navigation-list__item">
-                    <a href="./about.html" role="menuitem" title="About Me" class="navigation-list__item">About Me</a>
-                </li>
-                <li role="presentation" class="navigation-list__item">
-                    <a href="./work.html" role="menuitem" title="Work" class="navigation-list__item">Work</a>
-                </li>
-                <li role="presentation" class="navigation-list__item">
-                    <a href="./contact.html" role="menuitem" title="Contact"
-                        class="navigation-list__item navigation-list__item--active">Contact</a>
-                </li>
-            </ul>
-        </nav>
+      <a href="./index.html"
+        ><img
+          id="HeaderLogoImage"
+          src="img/FullLogo3.png"
+          alt="Full Logo for Developer Elizabeth Howell"
+          class="page-header__item"
+      /></a>
+      <nav class="main-navigation page-header__item">
+        <ul role="menubar" class="navigation-list brackets">
+          <li role="presentation" class="navigation-list__item">
+            <a
+              href="./index.html"
+              role="menuitem"
+              title="Home"
+              class="navigation-list__item"
+              >Home</a
+            >
+          </li>
+          <li role="presentation" class="navigation-list__item">
+            <a
+              href="./about.html"
+              role="menuitem"
+              title="About Me"
+              class="navigation-list__item"
+              >About Me</a
+            >
+          </li>
+          <li role="presentation" class="navigation-list__item">
+            <a
+              href="./work.html"
+              role="menuitem"
+              title="Work"
+              class="navigation-list__item"
+              >Work</a
+            >
+          </li>
+          <li role="presentation" class="navigation-list__item">
+            <a
+              href="./contact.html"
+              role="menuitem"
+              title="Contact"
+              class="navigation-list__item navigation-list__item--active"
+              >Contact</a
+            >
+          </li>
+        </ul>
+      </nav>
     </header>
     <main class="contactheader">
-        <!-- <article class="contactdata contactformbox">
-            <h1 class="link__calltoaction">
-                <a href="mailto:ehowell.webdev@gmail.com" title="Click here to contact me by email">Contact Me!</a>
-            </h1>
-            <form id="contact-form" class="form__contact">
-                <label for="RequestorName" class="standard-label">Name* </label>
-                <input type="text" name="RequestorName" id="RequestorName"/>
-                <br />
-                <br />
+      <article class="contactdata contactinfobox">
+        <h2>Contact Infomation</h2>
+        <div>
+          <h3>Elizabeth Howell</h3>
 
-                <label for="RequestorEmail" class="standard-label">Email* </label>
-                <input type="email" name="RequestorEmail" id="RequestorEmail"/>
-                <br />
-                <br />
-                
-                <label for="RequestorPhone" class="standard-label">Phone* </label>
-                <input name="RequestorPhone" id="RequestorPhone"
-                    placeholder="999-999-9999"/>
-
-                <br />
-                <br />
-                <br />
-
-                <label>What would you like to discuss?</label>
-                <br />
-                <br />
-
-                <label><input type="checkbox" name="radio" value="Subscribe" /> Subscribe to Newsletter</label>
-                <label><input type="checkbox" name="radio" value="Inquire" /> Inquire about a past work</label>
-                <label><input type="checkbox" name="radio" value="RFQ" /> Request a quote</label>
-                <br />
-                <br />
-
-                <label for="Message" class="standard-label">Message* </label>
-                <textarea name="Message" id="Message" maxlength="240" rows="8" cols="25" required></textarea>
-                <br />
-
-                <label>Max 240 characters</label>
-                <br />
-                <br />
-
-                <input type="submit" value="Submit" class="button" />
-                <br />
-                <br />
-            </form>
-            <br />
-            <br />
-        </article> -->
-
-        <article class="contactdata contactinfobox">
-            <h2>Contact Infomation</h2>
-            <div>
-                <h3>Elizabeth Howell</h3>
-                
-                <p class ="emailLink">
-                    <a href="mailto:ehowell.webdev@gmail.com" class ="emailLink">Email: ehowell.webdev (at) gmail (dot) com</a>
-                </p>
-            </div>
-        </article>
-    </main>
-    <footer id="FindMeIcons" class="page-footer">
-        <p>Find me on</p>
-        <div class="social-media svgBackgroung">
-            <!-- X Icon -->
-            <a href="https://twitter.com/eahowell89" target="_blank" title="Find me on X"><img
-                    src="img/twitter.svg" alt="X icon" class="xSVG"/></a>
-            <!-- LinkedIn Icon -->
-            <a href="https://www.linkedin.com/in/elizabethannhowell/" target="_blank" title="Find me on LinkedIn"><img
-                    src="img/linkedin.svg" alt="LinkedIn" class="linkedSVG"/></a>
-            <!-- GitHub Icon -->
-            <a href="https://github.com/eahowell" target="_blank" title="Find me on GitHub"><img src="img/github.svg"
-                    alt="Github" class="gitSVG"/></a>
+          <p class="emailLink">
+            <a href="mailto:ehowell.webdev@gmail.com" class="emailLink"
+              >Email: ehowell.webdev (at) gmail (dot) com</a
+            >
+          </p>
         </div>
-        <br />
-        <a href="#">Back to top</a>
-        <br />
-        <br />
-        <br />
+      </article>
+    </main>
+    <footer id="FindMeIcons" class="page-footer contact-footer">
+      <div class="social-media svgBackgroung">
+        <!-- X Icon -->
+        <a
+          href="https://twitter.com/eahowell89"
+          target="_blank"
+          title="Find me on X"
+          ><img src="img/twitter.svg" alt="X icon" class="xSVG xSVG-contact"
+        /></a>
+        <!-- LinkedIn Icon -->
+        <a
+          href="https://www.linkedin.com/in/elizabethannhowell/"
+          target="_blank"
+          title="Find me on LinkedIn"
+          ><img
+            src="img/linkedin.svg"
+            alt="LinkedIn"
+            class="linkedSVG linkedSVG-contact"
+        /></a>
+        <!-- GitHub Icon -->
+        <a
+          href="https://github.com/eahowell"
+          target="_blank"
+          title="Find me on GitHub"
+          ><img src="img/github.svg" alt="Github" class="gitSVG gitSVG-contact"
+        /></a>
+      </div>
     </footer>
     <script src="js/tota11y.min.js"></script>
-</body>
-<!-- CREDITS -->
-<!--Title of the Image" by [Artist's Name], Icon Finder. License: [License Type]. Available at: [URL]-->
-<!--"Roboto Slab" Font by Christian Robertson, Google Fonts, License: APACHE LICENSE, VERSION 2.0. Available at: https://www.apache.org/licenses/LICENSE-2.0-->
-<!--"Linkedin Icon" by Picons.me, Icon Finder. https://www.iconfinder.com/icons/104493/linkedin_icon-->
-<!--"X Twitter Icons" by IconFinder, Icon Finder. https://www.iconfinder.com/icons/11244080/x_twitter_elon%20musk_twitter%20new%20logo_icon-->
-<!--"Code repository, github, repository icon" by Pixel Bazaar, Icon Finder. License: CC BY 3.0 DEED. Available at: https://creativecommons.org/licenses/by/3.0/-->
-
+  </body>
+  <!-- CREDITS -->
+  <!--Title of the Image" by [Artist's Name], Icon Finder. License: [License Type]. Available at: [URL]-->
+  <!--"Roboto Slab" Font by Christian Robertson, Google Fonts, License: APACHE LICENSE, VERSION 2.0. Available at: https://www.apache.org/licenses/LICENSE-2.0-->
+  <!--"Linkedin Icon" by Picons.me, Icon Finder. https://www.iconfinder.com/icons/104493/linkedin_icon-->
+  <!--"X Twitter Icons" by IconFinder, Icon Finder. https://www.iconfinder.com/icons/11244080/x_twitter_elon%20musk_twitter%20new%20logo_icon-->
+  <!--"Code repository, github, repository icon" by Pixel Bazaar, Icon Finder. License: CC BY 3.0 DEED. Available at: https://creativecommons.org/licenses/by/3.0/-->
 </html>
