--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="./index.html"><img id="HeaderLogoImage" src="img/FullLogo3.png"
                 alt="Full Logo for Developer Elizabeth Howell" class="page-header__item" /></a>
         <nav class="main-navigation page-header__item">
-            <ul role="menubar" class="navigation-list topbottombordersOut">
+            <ul role="menubar" class="navigation-list brackets">
                 <li role="presentation" class="navigation-list__item">
                     <a href="./index.html" role="menuitem" title="Home"
                         class="navigation-list__item navigation-list__item--active">Home</a>
@@ -52,7 +52,7 @@
                 <p>I am a Mechanical Engineer turned  
                     <br> Full-Stack Web Developer 
                     <br> living in Austin, TX.</p>
-                <a class="button1"  href="./work.html">Check out some examples of my work!</a>
+                <a class="button1"  href="./work.html">Check out some of my work!</a>
             </div>
         </article>
         <br />
