--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
               role="menuitem"
               title="Work"
               class="navigation-list__item"
-              >Work</a
+              >Portfolio</a
             >
           </li>
           <li role="presentation" class="navigation-list__item">
@@ -119,7 +119,7 @@
         /></a>
       </div>
     </footer>
-    <script src="js/tota11y.min.js"></script>
+    <!-- <script src="js/tota11y.min.js"></script> -->
   </body>
   <!-- CREDITS -->
   <!--Title of the Image" by [Artist's Name], Icon Finder. License: [License Type]. Available at: [URL]-->
