--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a href="./about.html" role="menuitem" title="About Me" class="navigation-list__item">About Me</a>
                 </li>
                 <li role="presentation" class="navigation-list__item">
-                    <a href="./work.html" role="menuitem" title="Work" class="navigation-list__item">Work</a>
+                    <a href="./work.html" role="menuitem" title="Work" class="navigation-list__item">Portfolio</a>
                 </li>
                 <li role="presentation" class="navigation-list__item">
                     <a href="./contact.html" role="menuitem" title="Contact" class="navigation-list__item">Contact</a>
@@ -77,7 +77,7 @@
         <br />
         <br />
     </footer>
-    <script src="js/tota11y.min.js"></script>
+    <!-- <script src="js/tota11y.min.js"></script> -->
 </body>
 <!-- CREDITS -->
 <!--Title of the Image" by [Artist's Name], Icon Finder. License: [License Type]. Available at: [URL]-->
