--- a/work.html
+++ b/work.html
@@ -67,7 +67,7 @@
               role="menuitem"
               title="Work"
               class="navigation-list__item navigation-list__item--active"
-              >Work</a
+              >Portfolio</a
             >
           </li>
           <li role="presentation" class="navigation-list__item">
@@ -83,12 +83,12 @@
       </nav>
     </header>
     <main role="main">
-      <h1 id="CheckBackText">
+      <!-- <h1 id="CheckBackText">
         Check back as more items are added to my portfolio!
-      </h1>
+      </h1> -->
 
       <section class="section">
-        <h2>Portfolio of My Work</h2>
+        <h1>Portfolio of My Work</h1>
         <div class="project-list" id="projectList">
           <!-- Projects will be dynamically inserted here -->
         </div>
@@ -178,7 +178,7 @@
       <br />
       <br />
     </footer>
-    <script src="js/tota11y.min.js"></script>
+    <!-- <script src="js/tota11y.min.js"></script> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
