--- a/contact.html
+++ b/contact.html
@@ -141,7 +141,7 @@
         /></a>
       </div>
     </footer>
-    <!-- <script src="js/tota11y.min.js"></script> -->
+    <script src="js/script.js"></script>
   </body>
   <!-- CREDITS -->
   <!--Title of the Image" by [Artist's Name], Icon Finder. License: [License Type]. Available at: [URL]-->
