Add Screenshots for both myFlix projects

--- a/work.html
+++ b/work.html
@@ -139,7 +139,7 @@
         <h2>Your project?</h2>
         <p>
           I'd love to help you with your front-end and back-end needs! I work in
-          the following: React.js, JavaScript, Java, Java FX, HTML, and CSS.
+          the following: React.js, JavaScript, Angular, HTML, and CSS.
           Willing to learn others if needed.
         </p>
         <a href="./contact.html" target="_blank" title="Link to contact page">
