Added a Call to Action button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a href="./about.html" role="menuitem" title="About Me" class="navigation-list__item">About Me</a>
                 </li>
                 <li role="presentation" class="navigation-list__item">
-                    <a href="./work.html" role="menuitem" title="Work" class="navigation-list__item">Portfolio</a>
+                    <a href="./work.html" role="menuitem" title="Portfolio" class="navigation-list__item">Portfolio</a>
                 </li>
                 <li role="presentation" class="navigation-list__item">
                     <a href="./contact.html" role="menuitem" title="Contact" class="navigation-list__item">Contact</a>
@@ -52,7 +52,10 @@
                 <p>I am a Mechanical Engineer turned  
                     <br> Full-Stack Web Developer 
                     <br> living in Austin, TX.</p>
-                <a class="button1"  href="./work.html">Check out some of my work!</a>
+                <a class="button1"  href="./work.html" title="Link to the portfolio page">Check out some of my work</a>
+                <br>
+                <br>
+                <a class="button1"  href="./contact.html" title="Link to the contact page">Let's Collaborate!</a>
             </div>
         </article>
         <br />
