Updated Header Titles

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
             <a
               href="./work.html"
               role="menuitem"
-              title="Work"
+              title="Portfolio"
               class="navigation-list__item"
               >Portfolio</a
             >
