--- a/work.html
+++ b/work.html
@@ -65,7 +65,7 @@
             <a
               href="./work.html"
               role="menuitem"
-              title="Work"
+              title="Portfolio"
               class="navigation-list__item navigation-list__item--active"
               >Portfolio</a
             >
