--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
             <a
               href="./work.html"
               role="menuitem"
-              title="Work"
+              title="Portfolio"
               class="navigation-list__item"
               >Portfolio</a
             >
